--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Modern+Antiqua&family=Open+Sans+Condensed:wght@300&display=swap');
+
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Modern Antiqua;
+    font-weight: 300;
+    margin: 0;
+    padding: 0;
 }
