--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,13 +11,14 @@ body {
 h1, h2{
     font-family: Modern Antiqua;
     letter-spacing: 3px;
-    font-weight: 1000;
+    font-weight: 900;
+    color: #96258a;
 }
 
 #title {
     float: left;
-    font-size: 500%;
-    margin-top: 10px;
+    font-size: 450%;
+    margin: 10px 0 0 20px;
 }
 
 #menu li{
@@ -28,3 +29,21 @@ h1, h2{
     margin: 80px 20px 0 0;
 }
 
+#menu a {
+    text-decoration: none;
+    color: #709275;
+}
+
+#menu, #title {
+    line-height: 75px;
+}
+
+#menu a:hover {
+    color: #96258a;
+    border-bottom: 6px
+}
+
+.active {
+    color: #96258a;
+    border-bottom: 6px  #709275 solid;
+}
