--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Modern+Antiqua&family=Open+Sans+Condensed:wght@300&display=swap');
 
 body {
-    font-family: Modern Antiqua;
+    font-family: Modern Antiqua, sans serif;
     font-weight: 300;
     margin: 0;
     padding: 0;
@@ -9,7 +9,7 @@ body {
 }
 
 h1, h2{
-    font-family: Modern Antiqua;
+    font-family: Modern Antiqua, sans serif;
     letter-spacing: 3px;
     font-weight: 900;
     color: #96258a;
@@ -68,16 +68,26 @@ img {
     background-image: url('../images/pexels-zen-chung-5528938.jpg');
     background-size: cover;
 
-animation-name: hero-zoom-out;
-animation-duration: 5s;
-animation-fill-mode: forwards;
+    animation-name: hero-zoom-out;
+    animation-duration: 5s;
+    animation-fill-mode: forwards;
 }
 
 @keyframes hero-zoom-out {
     from{
-        transform: scale(1.4);
+        transform: scale(1.5);
     }
     to{
         transform: scale(1);    
     }
+}
+
+#text-overlay {
+    font-size: 120%;
+    color: #96258a;
+    font-family: Open Sans Condensed;
+    letter-spacing: 3px;
+    width: 300px;
+    height: 200px;
+
 }
