--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,7 +58,7 @@ img {
 }
 
 #hero-outer {
-    height: 700px;
+    height: 800px;
     width: 100%;
     overflow: hidden;
     position: relative;
@@ -106,6 +106,8 @@ img {
 
 #philosophy {
     height: 800px;
+    background-color: #CCBC87;
+    overflow: hidden;
 }
 
 #philosophy h1 {
@@ -117,16 +119,8 @@ img {
 #left-list {
     padding-top: 30px;
     float:left;
-    width: 50%;
-    margin-left: 30px;
-    border: #96258a solid 3px;
-}
-
-#image {
-    padding-top: 30px;
-    float:right;
-    width: 50%;
-    border: #96258a solid 3px;
+    width: 100%;
+    margin-right: 30px;
 }
 
 .left-list-title {
@@ -144,3 +138,5 @@ img {
 #left-list-title, h2 {
     color: #709275
 }
+
+
