add swap meet locations

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,3 +151,10 @@ img {
     text-align:center;
     padding-top: 30px;
 }
+
+.meets h2{
+    font-family: Open Sans Condensed;
+    color: #CCBC87;
+    letter-spacing: 3px;
+    text-align: left;
+}
