--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,3 +201,62 @@ footer {
 .socials > li a:hover {
     color: #CCBC87;
 }
+
+#pictures {
+    height: 800px;
+    clear: both;
+}
+
+#pictures > img {
+    width: 100%;
+}
+
+.signup-form {
+    margin: 200px;
+    color: #CCBC87;
+    background-color: #709275;
+    max-width: 400px;
+    padding: 30px;
+    border-radius: 8px;
+}
+
+.signup-form h2 {
+    color: #96258a;
+    margin-bottom: 20px;
+}
+
+.text-input {
+    background: transparent;
+    color: #E7E7E0;
+    width: 100%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    border: 1px solid #fafafa;
+    border-radius: 8px;
+}
+
+.text-input:hover {
+    color: #96258a;
+}
+
+.join-button {
+    margin-top: 20px;
+    border-radius: 8px;
+    padding: 15px 30px 15px 30px;
+    text-align: center;
+    font-size: 100%;
+    background-color:#E7E7E0;
+    color: #96258a;
+    display: block;
+}
+
+.join-button:hover {
+    background-color: #CCBC87;
+    color: #96258a;
+}
+
+#form-background {
+    clear: both;
+    height: 600px;
+    background-color: #709275;
+}
