--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,15 +214,13 @@ footer {
 .signup-form {
     margin: 200px;
     color: #CCBC87;
+    font-size: 150%;
     background-color: #709275;
     max-width: 400px;
     padding: 30px;
     border-radius: 8px;
-}
-
-.signup-form h2 {
-    color: #96258a;
-    margin-bottom: 20px;
+    font-family: Open Sans Condensed;
+    letter-spacing: 3px;
 }
 
 .text-input {
@@ -230,7 +228,7 @@ footer {
     color: #E7E7E0;
     width: 100%;
     height: 25px;
-    margin: 5px 0 20px 0;
+    margin: 5px 0 30px 0;
     border: 1px solid #fafafa;
     border-radius: 8px;
 }
@@ -241,6 +239,7 @@ footer {
 
 .join-button {
     margin-top: 20px;
+    margin-left: 20px;
     border-radius: 8px;
     padding: 15px 30px 15px 30px;
     text-align: center;
@@ -248,6 +247,8 @@ footer {
     background-color:#E7E7E0;
     color: #96258a;
     display: block;
+    font-family: Modern Antiqua;
+    letter-spacing: 3px;
 }
 
 .join-button:hover {
