--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@ body {
     margin: 0;
     padding: 0;
     color: #96258a;
+    background-color: #E7E7E0;
 }
 
 h1, h2{
@@ -58,7 +59,7 @@ h1, h2{
 }
 
 #text-overlay, #text-overlay h2 {
-    color: #ffffff;
+    color: #E7E7E0;
     }
 
 #hero {
@@ -84,6 +85,7 @@ h1, h2{
 #text-overlay {
     font-size: 120%;
     font-family: Open Sans Condensed;
+    color: #E7E7E0;
     text-transform: uppercase;
     letter-spacing: 3px;
     text-align: center;
@@ -160,6 +162,7 @@ h1, h2{
 
 .meets h3 {
     font-size: 110%;
+    color: #E7E7E0;
 }
 
 #locations div {
@@ -225,12 +228,11 @@ footer {
 }
 
 .text-input {
-    background: transparent;
     color: #E7E7E0;
     width: 100%;
     height: 25px;
     margin: 5px 0 30px 0;
-    border: 1px solid #fafafa;
+    border: 1px solid #E7E7E0;
     border-radius: 8px;
 }
 
@@ -261,4 +263,23 @@ footer {
     clear: both;
     height: 600px;
     background-color: #709275;
+}
+
+@media screen and (max-width: 1250px) {
+    #locations {
+        width: 65%;
+        height: 1250px;
+        margin: 0 auto;
+    }
+
+    .meets {
+        padding: 30px 0;
+        margin: 0;
+    }
+
+    #locations div {
+        width: 100%;
+        padding: 0;
+        float: left;
+    }
 }
