--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -290,9 +290,21 @@ footer {
 
 @media screen and (max-width: 1050px) {
     body {
-        text-align: center;
         height: 1250px;
         margin: 0 auto;
+    }
+
+    #title h1 {
+        margin: 0 auto;
+    }
+
+    #menu li {
+        width: 100%;
+        padding: 0;
+        float: left;
+        clear: left;
+        line-height: 5px;
+        padding-bottom: 30px;
     }
 
     #philosophy {
